--- a/war/dashboard/css/fancyform.css
+++ b/war/dashboard/css/fancyform.css
@@ -14,4 +14,8 @@ color: #fff;
 .checked,.selected{color:#f0f0f0}
 .f_radio:hover,.f_checkbox:hover{color:#fff !important}
 .f_radio{padding:4px 24px}
-.f_checkbox{padding
+.f_checkbox{padding:0.5em 24px}
+.unchecked{background-image:url(chk_off.png)}
+.checked{background-image:url(chk_on.png)}
+.unselected{background-image:url(rdo_off.png)}
+.selected{background-image:url(rdo_on.png)}
