--- a/war/dashboard/css/screensmall.css
+++ b/war/dashboard/css/screensmall.css
@@ -2,4 +2,24 @@
 .demo label {
 display: block;
 padding-left: 35px;
-background-posi
+background-position: 8px center;
+background-repeat: no-repeat;
+border: 1px solid #252525;
+clear: both;
+cursor: pointer;
+color: #fff;
+}
+.checked {
+background-color: #222;
+background-image: url(chk_on.png)
+}
+.unchecked {
+background-color: #1c1c1c;
+background-image: url(chk_off.png)
+}
+.selected {
+background-color: #222;
+background-image: url(rdo_on.png)
+}
+.unselected {
+background-c
