--- a/war/dashboard/css/settings.css
+++ b/war/dashboard/css/settings.css
@@ -10,4 +10,26 @@ div#settings {
 	line-height: 25px;
 	text-align: left;
 	text-decoration: none;
-	text
+	text-transform: uppercase;
+}
+
+div#settings button {
+	display: inline-block;
+	width: 100%;
+	margin-top: 20px;
+	border: 0;
+	background-color: #247da2;
+	font-family: Futura;
+	font-size      : 15px;
+	height: 25px;
+	line-height: 25px;
+	text-align     : center;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+div#settings button:hover {
+	color: white;
+}
+
+/* located in demo.css and creates a little calendar 
